Update feature flag cleanup tracker task to check generated file and cover windows feature flags as well (#4502)
* Update the feature flag cleanup tracker to check for the iOS and windows changes as well. It also checks the generated file now.

* Update task description

* Add test feature flags

* Use merge commit sha and add trigger for macos flags

* Add macos test flag

* Update macos test flag

* Add new macos test flag

* add 2 test flags

* add test flag

* Update description

* Remove the trigger for macOS and iOS

* Remove test flags from iOS and macOS

* Remove Android test feature flags

* Remove Windows test feature flags

* Trigger the feature flag cleanup tracker after the PR is merged

* Add fail-fast: false.

--- a/.github/workflows/feature-flag-cleanup-tracker.yml
+++ b/.github/workflows/feature-flag-cleanup-tracker.yml
@@ -1,55 +1,92 @@
-name: Feature Flag Cleanup Tracker (Android)
+name: Feature Flag Cleanup Tracker
 
 on:
     pull_request:
         types: [closed]
         paths:
             - 'overrides/android-override.json'
+            - 'overrides/windows-override.json'
+            - 'features/**/*.json'
 
 jobs:
     create-cleanup-task:
         runs-on: ubuntu-latest
         if: github.event.pull_request.merged == true
+        strategy:
+            fail-fast: false
+            matrix:
+                platform:
+                    - name: 'Android'
+                      config_file: 'android-config.json'
+                      override_file: 'overrides/android-override.json'
+                      asana_project: '${{ vars.GH_ANDROID_INTERNAL_WORK_PROJECT_ID }}'
+                      asana_section: '${{ vars.GH_ANDROID_FEATURE_FLAG_MAINTENANCE_SECTION_ID }}'
+                    - name: 'Windows'
+                      config_file: 'windows-config.json'
+                      override_file: 'overrides/windows-override.json'
+                      asana_project: '${{ vars.GH_WINDOWS_PROJECT_ID }}'
+                      asana_section: '${{ vars.GH_WINDOWS_FEATURE_FLAGS_SECTION_ID }}'
+        name: ${{ matrix.platform.name }} cleanup task
 
         steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
-              with:
-                  fetch-depth: 0
-
             - name: Set PR context variables
               id: pr_context
               run: |
                   echo "base_sha=${{ github.event.pull_request.base.sha }}" >> $GITHUB_OUTPUT
-                  echo "head_sha=${{ github.event.pull_request.head.sha }}" >> $GITHUB_OUTPUT
+                  # Use merge_commit_sha for both testing and production
+                  # For open PRs: test merge commit (what would happen if merged)
+                  # For merged PRs: actual merge commit (what landed on main)
+                  echo "head_sha=${{ github.event.pull_request.merge_commit_sha }}" >> $GITHUB_OUTPUT
                   echo "pr_number=${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
                   echo "pr_url=${{ github.event.pull_request.html_url }}" >> $GITHUB_OUTPUT
 
             - name: Install jq
               run: sudo apt-get update && sudo apt-get install -y jq
 
-            - name: Fetch PR commits
-              run: |
-                  # Fetch the PR ref which GitHub keeps even after branch deletion
-                  # This ensures we have access to all commits from the PR
-                  git fetch origin pull/${{ steps.pr_context.outputs.pr_number }}/head
+            - name: Setup Node.js
+              uses: actions/setup-node@v4
+              with:
+                  node-version: '20'
 
-            - name: Detect new Android feature flags
+            - name: Checkout base commit
+              uses: actions/checkout@v4
+              with:
+                  ref: ${{ steps.pr_context.outputs.base_sha }}
+                  path: base
+                  fetch-depth: 0
+
+            - name: Checkout merge commit
+              uses: actions/checkout@v4
+              with:
+                  ref: ${{ steps.pr_context.outputs.head_sha }}
+                  path: head
+                  fetch-depth: 0
+
+            - name: Build generated configs
+              id: build_configs
+              run: |
+                  set -euo pipefail
+                  for dir in base head; do
+                    echo "Building generated output in $dir"
+                    (cd "$dir" && npm ci && node index.js)
+                  done
+
+                  BASE_CONFIG_VERSION=$(node --input-type=module -e "const { CURRENT_CONFIG_VERSION } = await import('./base/constants.js'); console.log(CURRENT_CONFIG_VERSION);")
+                  HEAD_CONFIG_VERSION=$(node --input-type=module -e "const { CURRENT_CONFIG_VERSION } = await import('./head/constants.js'); console.log(CURRENT_CONFIG_VERSION);")
+                  echo "base_config_version=$BASE_CONFIG_VERSION" >> $GITHUB_OUTPUT
+                  echo "head_config_version=$HEAD_CONFIG_VERSION" >> $GITHUB_OUTPUT
+
+            - name: Detect new ${{ matrix.platform.name }} feature flags (generated output)
               id: detect_flags
               run: |
-                  # Get the android-override.json from base and head commits
-                  # Check if file exists in base commit (it might not if this is the first time adding it)
-                  if git cat-file -e ${{ steps.pr_context.outputs.base_sha }}:overrides/android-override.json 2>/dev/null; then
-                    BASE_FILE=$(git show ${{ steps.pr_context.outputs.base_sha }}:overrides/android-override.json)
-                  else
-                    # File doesn't exist in base, use empty JSON object
-                    BASE_FILE='{"features":{}}'
-                  fi
-                  HEAD_FILE=$(git show ${{ steps.pr_context.outputs.head_sha }}:overrides/android-override.json)
+                  BASE_CONFIG_VERSION="${{ steps.build_configs.outputs.base_config_version }}"
+                  HEAD_CONFIG_VERSION="${{ steps.build_configs.outputs.head_config_version }}"
+                  BASE_CONFIG="base/generated/v${BASE_CONFIG_VERSION}/${{ matrix.platform.config_file }}"
+                  HEAD_CONFIG="head/generated/v${HEAD_CONFIG_VERSION}/${{ matrix.platform.config_file }}"
 
                   # Extract all feature keys from base and head
-                  BASE_FEATURES=$(echo "$BASE_FILE" | jq -r '.features | keys[]' | sort)
-                  HEAD_FEATURES=$(echo "$HEAD_FILE" | jq -r '.features | keys[]' | sort)
+                  BASE_FEATURES=$(jq -r '.features | keys[]' "$BASE_CONFIG" | sort)
+                  HEAD_FEATURES=$(jq -r '.features | keys[]' "$HEAD_CONFIG" | sort)
 
                   # Find new top-level features
                   NEW_FEATURES=$(comm -13 <(echo "$BASE_FEATURES") <(echo "$HEAD_FEATURES"))
@@ -57,8 +94,8 @@ jobs:
                   # Detect new sub-features in existing features
                   NEW_SUBFEATURES=""
                   for feature in $(echo "$BASE_FEATURES"); do
-                    BASE_SUBS=$(echo "$BASE_FILE" | jq -r --arg f "$feature" '.features[$f].features // {} | keys[]' 2>/dev/null | sort || true)
-                    HEAD_SUBS=$(echo "$HEAD_FILE" | jq -r --arg f "$feature" '.features[$f].features // {} | keys[]' 2>/dev/null | sort || true)
+                    BASE_SUBS=$(jq -r --arg f "$feature" '.features[$f].features // {} | keys[]' "$BASE_CONFIG" 2>/dev/null | sort || true)
+                    HEAD_SUBS=$(jq -r --arg f "$feature" '.features[$f].features // {} | keys[]' "$HEAD_CONFIG" 2>/dev/null | sort || true)
 
                     if [ -n "$HEAD_SUBS" ]; then
                       NEW_SUBS=$(comm -13 <(echo "$BASE_SUBS") <(echo "$HEAD_SUBS") || true)
@@ -72,7 +109,7 @@ jobs:
 
                   # Also check NEW top-level features for any sub-features they contain
                   for feature in $NEW_FEATURES; do
-                    SUBS=$(echo "$HEAD_FILE" | jq -r --arg f "$feature" '.features[$f].features // {} | keys[]' 2>/dev/null || true)
+                    SUBS=$(jq -r --arg f "$feature" '.features[$f].features // {} | keys[]' "$HEAD_CONFIG" 2>/dev/null || true)
                     if [ -n "$SUBS" ]; then
                       for sub in $SUBS; do
                         NEW_SUBFEATURES="${NEW_SUBFEATURES}${feature}.${sub}"$'\n'
@@ -97,10 +134,10 @@ jobs:
                   ALL_NEW_FLAGS=$(echo "$ALL_NEW_FLAGS" | sed '/^$/d')
 
                   if [ -z "$ALL_NEW_FLAGS" ]; then
-                    echo "No new Android feature flags detected"
+                    echo "No new ${{ matrix.platform.name }} feature flags detected"
                     echo "has_new_flags=false" >> $GITHUB_OUTPUT
                   else
-                    echo "New Android feature flags detected:"
+                    echo "New ${{ matrix.platform.name }} feature flags detected:"
                     echo "$ALL_NEW_FLAGS"
                     echo "has_new_flags=true" >> $GITHUB_OUTPUT
                     echo "flags<<EOF" >> $GITHUB_OUTPUT
@@ -112,6 +149,11 @@ jobs:
               if: steps.detect_flags.outputs.has_new_flags == 'true'
               id: asana_content
               run: |
+                  HEAD_CONFIG_VERSION="${{ steps.build_configs.outputs.head_config_version }}"
+                  CONSTRUCTED_FILE="generated/v${HEAD_CONFIG_VERSION}/${{ matrix.platform.config_file }}"
+                  PLATFORM_NAME="${{ matrix.platform.name }}"
+                  OVERRIDE_FILE="${{ matrix.platform.override_file }}"
+
                   # Count how many flags were added
                   FLAG_COUNT=$(echo "${{ steps.detect_flags.outputs.flags }}" | wc -l | xargs)
 
@@ -128,33 +170,38 @@ jobs:
                       FEATURE_NAME="$FEATURE_PATH"
                     fi
 
-                    TASK_NAME="[Android] Remove feature flag: $FEATURE_NAME"
-                    TASK_DESCRIPTION="This Android feature flag was added in PR #${{ steps.pr_context.outputs.pr_number }}
+                    TASK_NAME="[$PLATFORM_NAME] Remove feature flag: $FEATURE_NAME"
+                    TASK_DESCRIPTION="This $PLATFORM_NAME feature flag was added in PR #${{ steps.pr_context.outputs.pr_number }}
 
                   PR Link: ${{ steps.pr_context.outputs.pr_url }}
                   Feature Path: \`$FEATURE_PATH\`
-                  File: \`overrides/android-override.json\`
+                  File (constructed): \`$CONSTRUCTED_FILE\`
+                  Inputs: \`features/\` + \`$OVERRIDE_FILE\`
 
                   Action Required:
-                  Please review this feature flag after the due date and determine if it can be removed. Feature flags should be temporary and cleaned up once the feature is stable.
+                  Please review this feature flag after the due date and determine if it can be removed.
 
-                  Steps to remove:
-                  1. Verify the feature is working as expected in Android production
-                  2. Remove the feature flag from \`overrides/android-override.json\` at path: \`$FEATURE_PATH\`
-                  3. Remove any Android code that references this feature flag
-                  4. Update any documentation
-                  5. Create a PR with the cleanup changes
+                  Note: Check if this is a kill switch or permanent feature toggle. If it's meant to be permanent (e.g., kill switch, long-term A/B test, or operational toggle), you can close this task without removing the flag. Only temporary rollout flags need to be cleaned up once the feature is stable.
+
+                  Steps to remove (if not a permanent flag):
+                  1. Verify the feature is working as expected in $PLATFORM_NAME production
+                  2. Remove any $PLATFORM_NAME code that references this feature flag
+                  3. Update any documentation
+                  4. Create a PR with the cleanup changes
+
+                  Note: The flag can remain in the config files (\`$CONSTRUCTED_FILE\`) for backwards compatibility with older app versions.
 
                   Workflow run: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
                   else
                     # Multiple feature flags - create summary task
-                    TASK_NAME="[Android] Remove feature flags added in PR #${{ steps.pr_context.outputs.pr_number }}"
-                    TASK_DESCRIPTION="Multiple Android feature flags were added in PR #${{ steps.pr_context.outputs.pr_number }}
+                    TASK_NAME="[$PLATFORM_NAME] Remove feature flags added in PR #${{ steps.pr_context.outputs.pr_number }}"
+                    TASK_DESCRIPTION="Multiple $PLATFORM_NAME feature flags were added in PR #${{ steps.pr_context.outputs.pr_number }}
 
-                  **PR Link:** ${{ steps.pr_context.outputs.pr_url }}
-                  **File:** \`overrides/android-override.json\`
+                  PR Link: ${{ steps.pr_context.outputs.pr_url }}
+                  Constructed File: \`$CONSTRUCTED_FILE\`
+                  Inputs: \`features/\` + \`$OVERRIDE_FILE\`
 
-                  **Feature Flags to Review:**
+                  Feature Flags to Review:
                   "
 
                     # List each feature flag
@@ -169,7 +216,7 @@ jobs:
                         fi
 
                         TASK_DESCRIPTION="${TASK_DESCRIPTION}
-                  - **$FEATURE_NAME**
+                  - $FEATURE_NAME
                     Path: \`$FEATURE_PATH\`
                   "
                       fi
@@ -177,15 +224,18 @@ jobs:
 
                     TASK_DESCRIPTION="${TASK_DESCRIPTION}
 
-                  **Action Required:**
-                  Please review these feature flags after the due date and determine if they can be removed. Feature flags should be temporary and cleaned up once the feature is stable.
+                  Action Required:
+                  Please review these feature flags after the due date and determine if they can be removed.
 
-                  **Steps to remove:**
-                  1. Verify each feature is working as expected in Android production
-                  2. Remove the feature flags from \`overrides/android-override.json\`
-                  3. Remove any Android code that references these feature flags
-                  4. Update any documentation
-                  5. Create a PR with the cleanup changes
+                  Note: Check if any of these are kill switches or permanent feature toggles. If a flag is meant to be permanent (e.g., kill switch, long-term A/B test, or operational toggle), you can keep it and close this task. Only temporary rollout flags need to be cleaned up once the feature is stable.
+
+                  Steps to remove (for non-permanent flags):
+                  1. Verify each feature is working as expected in $PLATFORM_NAME production
+                  2. Remove any $PLATFORM_NAME code that references these feature flags
+                  3. Update any documentation
+                  4. Create a PR with the cleanup changes
+
+                  Note: The flags can remain in the config files (\`$CONSTRUCTED_FILE\`) for backwards compatibility with older app versions.
 
                   Workflow run: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
                   fi
@@ -209,8 +259,8 @@ jobs:
               uses: duckduckgo/native-github-asana-sync@v2.0
               with:
                   asana-pat: ${{ secrets.ASANA_ACCESS_TOKEN }}
-                  asana-project: ${{ vars.GH_ANDROID_INTERNAL_WORK_PROJECT_ID }}
-                  asana-section: ${{ vars.GH_ANDROID_FEATURE_FLAG_MAINTENANCE_SECTION_ID }}
+                  asana-project: ${{ matrix.platform.asana_project }}
+                  asana-section: ${{ matrix.platform.asana_section }}
                   asana-task-name: ${{ steps.asana_content.outputs.task_name }}
                   asana-task-assignee: ${{ steps.get-author-asana-id.outputs.asanaUserId }}
                   asana-task-description: ${{ steps.asana_content.outputs.task_description }}
